introduzione modulo trasmitter

--- a/config/templates/default.json.tmpl
+++ b/config/templates/default.json.tmpl
@@ -1,22 +1,30 @@
-{
-  "data":
-      [
-        {%- for item in data %}
-          {
-            "key": "{{item['key']}}",
-            "values":
-              [
-                {%- for value in item['values'] %}
-                  { "{{value[0]}}": {{value[1]}} } {{ ", " if not loop.last else ""}}
-                {%- endfor %}
-              ],
-            "labels":
-              [
-                {%- for key, value in item['labels'].items() %}
-                  { "{{key}}": "{{value}}" } {{ ", " if not loop.last else ""}}
-                {%- endfor %}
-              ]
-          } {{ ", " if not loop.last else ""}}
-        {%- endfor %}
-      ]
+{ 
+  "data": 
+    {
+      "key": "{{data['key']}}",
+      "values":
+        [
+          {%- for value in data['values'] %}
+            "{{value}}"{{ ", " if not loop.last else ""}}
+          {%- endfor %}
+        ],
+      "timestamps":
+        [
+          {%- for value in data['timestamps'] %}
+            "{{value}}"{{ ", " if not loop.last else ""}}
+          {%- endfor %}
+        ],
+      "labels":
+        {
+          {%- for key, value in data['labels'].items() %}
+            "{{key}}": "{{value}}"{{ ", " if not loop.last else ""}}
+          {%- endfor %}
+        },
+      "tags":
+        {
+          {%- for key, value in data['tags'].items() %}
+            "{{key}}": "{{value}}"{{ ", " if not loop.last else ""}}
+          {%- endfor %}
+        }
+    }
 }
