--- a/config/templates/default.yaml.tmpl
+++ b/config/templates/default.yaml.tmpl
@@ -1,12 +1,18 @@
 data:
-  {%- for item in data %}
-  - key: "{{item['key']}}"
+  - key: "{{data['key']}}"
     values:
-      {%- for value in item['values'] %}
-      - {{value[0]}}: {{value[1]}}
+      {%- for value in data['values'] %}
+      - {{value}}
+      {%- endfor %}
+    timestamps:
+      {%- for value in data['timestamps'] %}
+      - {{value}}
       {%- endfor %}
     labels:
-      {%- for key, value in item['labels'].items() %}
+      {%- for key, value in data['labels'].items() %}
       - {{key}}: {{value}}
       {%- endfor %}
-  {%- endfor %}
+    tags:
+      {%- for key, value in data['tags'].items() %}
+      - {{key}}: {{value}}
+      {%- endfor %}
