--- a/templates/default.xml.tmpl
+++ b/templates/default.xml.tmpl
@@ -1,3 +1,4 @@
+{% if not data['key'].startswith('CPU_STATS:') %}
 <?xml version="1.0" encoding="UTF-8" ?>
 <data>
     <key>{{data['key']}}</key>
@@ -22,3 +23,4 @@
     {%- endfor %}
     </tags>
 </data>
+{% endif %}
